# python-type-stubs

./: .gitignore  pyproject.toml  setup.py
scikit-learn-stubs/: __init__.pyi
sklearn-stubs/: __init__.pyi
sklearn-stubs/model_selection/: __init__.pyi
stubs/sklearn/: __init__.pyi
stubs/sklearn/model_selection/: __init__.pyi
